--- a/assets/sass/libs/_breakpoints.scss
+++ b/assets/sass/libs/_breakpoints.scss
@@ -4,7 +4,8 @@
 
 	/// Breakpoints.
 	/// @var {list}
-	$breakpoints: () !global;
+	/// $breakpoints: () !global;
+	$breakpoints: null;
 
 // Mixins.
 
@@ -41,7 +42,7 @@
 				}
 
 			// Less than or equal.
-				@elseif (str-slice($query, 0, 2) == '<=') {
+				@else if (str-slice($query, 0, 2) == '<=') {
 
 					$op: 'lte';
 					$breakpoint: str-slice($query, 3);
@@ -49,7 +50,7 @@
 				}
 
 			// Greater than.
-				@elseif (str-slice($query, 0, 1) == '>') {
+				@else if (str-slice($query, 0, 1) == '>') {
 
 					$op: 'gt';
 					$breakpoint: str-slice($query, 2);
@@ -57,7 +58,7 @@
 				}
 
 			// Less than.
-				@elseif (str-slice($query, 0, 1) == '<') {
+				@else if (str-slice($query, 0, 1) == '<') {
 
 					$op: 'lt';
 					$breakpoint: str-slice($query, 2);
@@ -65,7 +66,7 @@
 				}
 
 			// Not.
-				@elseif (str-slice($query, 0, 1) == '!') {
+				@else if (str-slice($query, 0, 1) == '!') {
 
 					$op: 'not';
 					$breakpoint: str-slice($query, 2);
@@ -100,22 +101,22 @@
 									}
 
 								// Less than or equal (<= y)
-									@elseif ($op == 'lte') {
+									@else if ($op == 'lte') {
 										$media: 'screen and (max-width: ' + $y + ')';
 									}
 
 								// Greater than (> y)
-									@elseif ($op == 'gt') {
+									@else if ($op == 'gt') {
 										$media: 'screen and (min-width: ' + ($y + 1) + ')';
 									}
 
 								// Less than (< 0 / invalid)
-									@elseif ($op == 'lt') {
+									@else if ($op == 'lt') {
 										$media: 'screen and (max-width: -1px)';
 									}
 
 								// Not (> y)
-									@elseif ($op == 'not') {
+									@else if ($op == 'not') {
 										$media: 'screen and (min-width: ' + ($y + 1) + ')';
 									}
 
@@ -135,22 +136,22 @@
 									}
 
 								// Less than or equal (<= inf / anything)
-									@elseif ($op == 'lte') {
+									@else if ($op == 'lte') {
 										$media: 'screen';
 									}
 
 								// Greater than (> inf / invalid)
-									@elseif ($op == 'gt') {
+									@else if ($op == 'gt') {
 										$media: 'screen and (max-width: -1px)';
 									}
 
 								// Less than (< x)
-									@elseif ($op == 'lt') {
+									@else if ($op == 'lt') {
 										$media: 'screen and (max-width: ' + ($x - 1) + ')';
 									}
 
 								// Not (< x)
-									@elseif ($op == 'not') {
+									@else if ($op == 'not') {
 										$media: 'screen and (max-width: ' + ($x - 1) + ')';
 									}
 
@@ -170,22 +171,22 @@
 									}
 
 								// Less than or equal (<= y)
-									@elseif ($op == 'lte') {
+									@else if ($op == 'lte') {
 										$media: 'screen and (max-width: ' + $y + ')';
 									}
 
 								// Greater than (> y)
-									@elseif ($op == 'gt') {
+									@else if ($op == 'gt') {
 										$media: 'screen and (min-width: ' + ($y + 1) + ')';
 									}
 
 								// Less than (< x)
-									@elseif ($op == 'lt') {
+									@else if ($op == 'lt') {
 										$media: 'screen and (max-width: ' + ($x - 1) + ')';
 									}
 
 								// Not (< x and > y)
-									@elseif ($op == 'not') {
+									@else if ($op == 'not') {
 										$media: 'screen and (max-width: ' + ($x - 1) + '), screen and (min-width: ' + ($y + 1) + ')';
 									}
 
