--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -38,7 +38,7 @@
 		kerning-heading-alt:	-0.05em
 	);
 
-// Palette.
+// Palette.  49fcd4
 	$palette: (
 		bg:						#ffffff,
 		fg:						#000000,
@@ -46,8 +46,8 @@
 		fg-light:				rgba(0,0,0,0.25),
 		border:					rgba(144,144,144,0.25),
 		border-bg:				rgba(144,144,144,0.1),
-		accent:					#49fcd4,
-		accent-border:			desaturate(darken(#49fcd4, 8), 30),
-		accent-alt:				desaturate(darken(#49fcd4, 10), 20),
-		accent-bg:				transparentize(#49fcd4, 0.75)
+		accent:					#ffff00,
+		accent-border:			desaturate(darken(#ffff66, 8), 30),
+		accent-alt:				desaturate(darken(#ffff66, 10), 20),
+		accent-bg:				transparentize(#ffff66, 0.75)
 	);
