--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -46,8 +46,8 @@
 		fg-light:				rgba(0,0,0,0.25),
 		border:					rgba(144,144,144,0.25),
 		border-bg:				rgba(144,144,144,0.1),
-		accent:					#ffff00,
-		accent-border:			desaturate(darken(#ffff66, 8), 30),
-		accent-alt:				desaturate(darken(#ffff66, 10), 20),
-		accent-bg:				transparentize(#ffff66, 0.75)
+		accent:					#ffff66,
+		accent-border:			desaturate(darken(#FFAE3D, 8), 30),
+		accent-alt:				desaturate(darken(#FFAE3D, 10), 20),
+		accent-bg:				transparentize(#FFAE3D, 0.75)
 	);
