--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -41,6 +41,7 @@
 	@import 'components/image';
 	@import 'components/list';
 	@import 'components/actions';
+	@import 'components/emvideo';
 	@import 'components/icons';
 	@import 'components/table';
 	@import 'components/arrow';
