--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2785,6 +2785,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
 }
 #wrapper > section.intro {
   align-items: center;
+  background-image: url("../black-white-textured-seamless-pattern-background-repeating-round-circle_157822-291.jpg");
 }
 #wrapper > section.intro > header {
   padding-top: 2.8rem;
@@ -2800,6 +2801,7 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
 #wrapper > section.intro > .content {
   height: 100vh;
   max-width: none;
+  background-color: grey;
 }
 #wrapper > section:last-of-type > header:before {
   height: 100%;
@@ -2862,6 +2864,9 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   margin-left: calc(50vw - 10rem);
   display: none;
 }
+#wrapper > section.intro > header h1, #wrapper > section.intro > header h2 {
+  margin-top: 1rem;
+}
 #wrapper > section.intro > header h1:before, #wrapper > section.intro > header h2:before {
   right: -5rem;
   width: 2.5rem;
@@ -2870,6 +2875,17 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
 #wrapper > section.intro > header h1:after, #wrapper > section.intro > header h2:after {
   right: -2.5rem;
   display: none;
+}
+#wrapper > section.intro > header h4 {
+  font-weight: 800;
+  width: 25rem;
+  text-align: left;
+  background-color: white;
+  padding: 1rem;
+}
+#wrapper > section.intro > header .tagline {
+  background-color: white;
+  padding: 2rem;
 }
 @media screen and (max-width: 1152px) {
   #wrapper > section.intro > header > * {
@@ -2926,6 +2942,9 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
     margin-left: calc(50vw - 8rem);
     display: none;
   }
+  #wrapper > section.intro > header h1, #wrapper > section.intro > header h2 {
+    margin-top: 1rem;
+  }
   #wrapper > section.intro > header h1:before, #wrapper > section.intro > header h2:before {
     right: -4rem;
     width: 2rem;
@@ -2934,6 +2953,17 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper > section.intro > header h1:after, #wrapper > section.intro > header h2:after {
     right: -2rem;
     display: none;
+  }
+  #wrapper > section.intro > header h4 {
+    font-weight: 800;
+    width: 25rem;
+    text-align: left;
+    background-color: white;
+    padding: 1rem;
+  }
+  #wrapper > section.intro > header .tagline {
+    background-color: white;
+    padding: 2rem;
   }
 }
 @media screen and (max-width: 1280px) and (max-width: 1152px) {
@@ -3076,8 +3106,22 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper > section > footer {
     padding: 0 4rem 4rem 4rem;
   }
+  #wrapper > section.intro {
+    background-image: url("../black-white-textured-seamless-pattern-background-repeating-round-circle_157822-291.jpg");
+  }
   #wrapper > section.intro > header {
     padding: 8rem 4rem 5rem 4rem;
+  }
+  #wrapper > section.intro > header h4 {
+    font-weight: 800;
+    width: 12.5rem;
+    text-align: left;
+    background-color: white;
+    padding: 1rem;
+  }
+  #wrapper > section.intro > header .tagline {
+    background-color: white;
+    padding: 2rem;
   }
   #wrapper .copyright {
     padding: 0 4rem 4rem 4rem;
@@ -3102,8 +3146,22 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper > section > footer {
     padding: 0 2rem 3rem 2rem;
   }
+  #wrapper > section.intro {
+    background-image: url("../black-white-textured-seamless-pattern-background-repeating-round-circle_157822-291.jpg");
+  }
   #wrapper > section.intro > header {
     padding: 5.5rem 2rem 2.5rem 2rem;
+  }
+  #wrapper > section.intro > header h4 {
+    font-weight: 800;
+    width: 12.5rem;
+    text-align: left;
+    background-color: white;
+    padding: 1rem;
+  }
+  #wrapper > section.intro > header .tagline {
+    background-color: white;
+    padding: 2rem;
   }
   #wrapper .copyright {
     padding: 0 2rem 2rem 2rem;
@@ -3128,8 +3186,22 @@ ul.feature-icons li:nth-child(1), ul.feature-icons li:nth-child(2) {
   #wrapper > section > footer {
     padding: 0 1.5rem 2.25rem 1.5rem;
   }
+  #wrapper > section.intro {
+    background-image: url("../black-white-textured-seamless-pattern-background-repeating-round-circle_157822-291.jpg");
+  }
   #wrapper > section.intro > header {
     padding: 4.875rem 1.5rem 1.875rem 1.5rem;
+  }
+  #wrapper > section.intro > header h4 {
+    font-weight: 800;
+    width: 12.5rem;
+    text-align: left;
+    background-color: white;
+    padding: 1rem;
+  }
+  #wrapper > section.intro > header .tagline {
+    background-color: white;
+    padding: 2rem;
   }
   #wrapper .copyright {
     padding: 0 1.5rem 1.5rem 1.5rem;
